CHANGES IN FLTK 1.1.8

	- Fixed Scroll crash in Fluid Live Mode (STR #1524) 
	- Fixed mousewheel event propagation (STR #1521) 
	- Fixed drawing issues of a tile in a scroll (STR #1507) 
	- Fixed dismissing buttons in menu bars (STR #1494) 
	- Making a child group visible in a Fl_Tabs or Fl_Wizard
	  group now shows that tab or pane.
	- Added fl_open_uri() function as proposed on
	  fltk.development.
	- Added Fl::has_check() which previously was prototyped
	  and documented, but not implemented (STR #1542)
	- Enabled Fl::add_check() on OS X (STR #1534)
	- Documented tooltip inheritance (STR #1467)
	- Better event mouse handling fixing detached menus and
	  sticky tooltips (STR #1463, STR #449)
	- Documentation fixes (STR #1454, STR #1455, STR #1456,
	  STR #1457, STR #1458, STR #1460, STR #1481)
	- Added Fl::scrollbar_size() methods that are used by all
	  of the scrollbar-using widgets (STR #1500)
	- fl_read_image() was broken on Intel-based Macs (STR
	  #1490)
	- Fl_Progress was using the wrong width to calculate 
	  progress (STR #1492)
	- Fl::x(), Fl::y(), Fl::w(), and Fl::h() did not report
	  the desktop work area on X11 (STR #1482)
	- Shortcut events could be sent to the wrong window (STR
	  #1451)
	- Fl_Spinner did not handle the arrow keys properly (STR
	  #1476)
	- Fl_File_Browser did not calculate the width of
	  directory items correctly (STR #1469, STR #1470)
	- Fl_Pack incorrectly started widgets at an offset of 1/2
	  the spacing value.
	- FLUID did not generate correct window class code if
	  the class name was not a standard FLTK window class.
	- FLUID incorrectly included <FL/Fl_classname.H> for
	  widget classes that were not subclassed from a standard
	  FLTK widget class.
	- The demo master test program now supports scheme
	  selection and all demos use it (STR #1459)
	- fl_arc() and fl_pie() did not draw properly on WIN32
	  when the start and end points were identical (STR
	  #1461)
	- Fl_Input and Fl_Text_Editor now hide the mouse pointer